[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/Quicksand-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://code/ui_elements/rytm_rule.gd" type="Script" id=2]
[ext_resource path="res://art/themes/beat_theme.tres" type="Theme" id=3]
[ext_resource path="res://code/time_manager.gd" type="Script" id=4]
[ext_resource path="res://art/themes/p_area_theme.tres" type="StyleBox" id=5]
[ext_resource path="res://art/themes/b_area_theme.tres" type="StyleBox" id=6]
[ext_resource path="res://art/themes/g_area_theme.tres" type="StyleBox" id=7]

[sub_resource type="Gradient" id=4]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0.392157, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("p_l:custom_styles/panel:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.392157 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("p_r:custom_styles/panel:texture:gradient:colors")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.392157 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("g_l:custom_styles/panel:texture:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.392157 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("b_l:custom_styles/panel:texture:gradient:colors")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.117647 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "b_pressed"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("b_l:custom_styles/panel:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.117647 ), PoolColorArray( 1, 0.34902, 0.34902, 0, 1, 0.34902, 0.34902, 0.117647 ), PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 0.117647 ), PoolColorArray( 1, 0.34902, 0.34902, 0, 1, 0.34902, 0.34902, 0.117647 ), PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.117647 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "g_pressed"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("g_l:custom_styles/panel:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.235294 ), PoolColorArray( 0.494118, 0.690196, 1, 0, 0.494118, 0.690196, 1, 0.235294 ), PoolColorArray( 0.196078, 0.509804, 1, 0, 0.196078, 0.509804, 1, 0.235294 ), PoolColorArray( 0.494118, 0.690196, 1, 0, 0.494118, 0.690196, 1, 0.235294 ), PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.235294 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("p_l:custom_styles/panel:texture:gradient:colors")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.352941 ), PoolColorArray( 0.788235, 1, 0.419608, 0, 0.866667, 1, 0.631373, 0.352941 ), PoolColorArray( 0.745098, 0.988235, 0.32549, 0, 0.745098, 0.988235, 0.32549, 0.352941 ), PoolColorArray( 0.788235, 1, 0.419608, 0, 0.866667, 1, 0.631373, 0.352941 ), PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.352941 ) ]
}

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.75 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.392157 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 10 )
fill_from = Vector2( 0.5, 0 )
fill_to = Vector2( 0.5, 0.5 )
repeat = 2

[sub_resource type="StyleBoxTexture" id=9]
texture = SubResource( 8 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="Theme" id=11]
Panel/styles/panel = SubResource( 9 )

[node name="RytmRule" type="Control"]
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource( 2 )
beat_theme = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
margin_left = -200.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )

[node name="Center" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "+"

[node name="TimeManager" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/b_pressed = SubResource( 14 )
anims/g_pressed = SubResource( 13 )
anims/p_pressed = SubResource( 12 )

[node name="p_l" type="Panel" parent="."]
theme = SubResource( 11 )
custom_styles/panel = ExtResource( 5 )

[node name="p_r" type="Panel" parent="."]
custom_styles/panel = ExtResource( 5 )

[node name="g_l" type="Panel" parent="."]
custom_styles/panel = ExtResource( 7 )

[node name="g_r" type="Panel" parent="."]
custom_styles/panel = ExtResource( 7 )

[node name="b_l" type="Panel" parent="."]
custom_styles/panel = ExtResource( 6 )

[node name="b_r" type="Panel" parent="."]
custom_styles/panel = ExtResource( 6 )

[connection signal="beat" from="TimeManager" to="." method="_on_TimeManager_beat"]
[connection signal="timeout" from="TimeManager" to="." method="_on_TimeManager_timeout"]
